# triage-agent

./: .gitignore  README.md  check-requirements.sh  gen-traffic.sh  run-minikube.sh  setup-model.sh  start-ollama.sh
agent/: .dockerignore  Dockerfile  agent.py  api.py  check_ollama.py  cli.py  llm.py  main.py  mcp_client.py  pyproject.toml
agent-ui/: Dockerfile  package-lock.json  package.json
agent-ui/kubernetes/: deployment.yaml  service.yaml
agent-ui/src/app/: layout.tsx  page.tsx
agent-ui/src/components/ThemeRegistry/: EmotionCache.tsx  ThemeRegistry.tsx
agent/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
dummy-app/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
dummy-app/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
dummy-app/src/: app.ts  instrumentation.ts
k6/: docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
k6/src/: script.ts
lgtm/: Dockerfile
lgtm/kubernetes/: configmap.yaml  deployment.yaml  pvcs.yaml  service.yaml
mcp/: github.Dockerfile  grafana.Dockerfile  kubernetes.Dockerfile  load-secrets.sh
mcp/kubernetes/: github-mcp.yaml  grafana-mcp.yaml  kubernetes-mcp.yaml
minikube/: load-to-minikube.sh  port-forward.sh  start-minikube.sh
